force-app/main/default/objects/Form_Builder__WorkFlowField__c/fields/Form_Builder__Field_Type__c.field-meta.xml
<CustomField>
    <fullName>Form_Builder__Field_Type__c</fullName>
    <label>Field Type</label>
    <length>64</length>
    <type>Text</type>
</CustomField>