force-app/main/default/objects/Form_Builder__WorkFlowField__c/fields/Form_Builder__Field_Value__c.field-meta.xml
<CustomField>
    <fullName>Form_Builder__Field_Value__c</fullName>
    <label>Field Value</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>