force-app/main/default/objects/Form_Builder__WorkFlowField__c/fields/Form_Builder__FieldID_ProjectID__c.field-meta.xml
<CustomField>
    <fullName>Form_Builder__FieldID_ProjectID__c</fullName>
    <externalId>true</externalId>
    <label>FieldID ProjectID</label>
    <length>200</length>
    <type>Text</type>
</CustomField>