force-app/main/default/objects/Form_Builder__WorkFlowField__c/fields/Form_Builder__WorkFlow__c.field-meta.xml
<CustomField>
    <fullName>Form_Builder__WorkFlow__c</fullName>
    <label>WorkFlow</label>
    <referenceTo>Form_Builder__WorkFlow__c</referenceTo>
    <relationshipLabel>WorkFlow Fields</relationshipLabel>
    <relationshipName>WorkFlow_Fields</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>